--- a/src/Containers/MemoryGame.scss
+++ b/src/Containers/MemoryGame.scss
@@ -9,7 +9,7 @@
 
   .title {
     margin: 40px 0;
-    width: 620px;
+    max-width: 620px;
 
     img {
       width: 100%;
@@ -17,14 +17,32 @@
   }
 
   .cards-container {
-    width: 550px;
+    max-width: 550px;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 110px);
+    grid-template-rows: repeat(4, 110px);
     gap: 20px;
     border: 5px outset #1d6aa8;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.568);
+  }
+
+  @media (max-width: 550px) {
+    .cards-container {
+      padding: 15px;
+      grid-template-columns: repeat(4, 80px);
+      grid-template-rows: repeat(4, 80px);
+      gap: 15px;
+    }
+  }
+
+  @media (max-width: 400px) {
+    .cards-container {
+      padding: 10px;
+      grid-template-columns: repeat(4, 60px);
+      grid-template-rows: repeat(4, 60px);
+      gap: 10px;
+    }
   }
 }
