--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -29,6 +29,13 @@
     transition: transform linear 0.3s;
   }
 
+  @media (max-width: 400px) {
+    .cover,
+    .front {
+      padding: 1px;
+    }
+  }
+
   .flipped {
     .cover {
       transform: rotateX(90deg);
