--- a/src/components/TimerBar/TimerBar.scss
+++ b/src/components/TimerBar/TimerBar.scss
@@ -1,5 +1,7 @@
 .timer-container {
   margin-top: 50px;
+  width: 100%;
+  max-width: 620px;
 
   .timer {
     padding: 5px 5px;
@@ -8,7 +10,7 @@
     background-color: rgba(255, 255, 255, 0.568);
 
     progress {
-      width: 620px;
+      width: 100%;
       height: 20px;
       background: #42b032;
       border-radius: 5px;
