--- a/src/components/TurnCounter/TurnCounter.scss
+++ b/src/components/TurnCounter/TurnCounter.scss
@@ -1,14 +1,17 @@
 .turncounter-container {
-  width: 550px;
+  width: 100%;
+  max-width: 550px;
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   .turncounter,
   .record {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 130px;
 
     p {
       color: #fff;
