--- a/src/components/StartModal/StartModal.scss
+++ b/src/components/StartModal/StartModal.scss
@@ -13,6 +13,8 @@
   }
 
   .introduction {
+    max-width: 900px;
+    width: 100%;
     border: 5px outset #2097ff;
     border-radius: 5px;
     background: linear-gradient(#2097ff, #94edff);
@@ -28,6 +30,10 @@
 
     .welcome {
       margin-bottom: 10px;
+
+      img {
+        width: 100%;
+      }
     }
 
     .description {
